kubernetes/apps/home-assistant-hacs/home-assistant-hacs/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-hacs
  namespace: home-assistant-hacs
  labels:
    app: home-assistant-hacs
spec:
  type: ClusterIP
  selector:
    app: home-assistant-hacs
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
