kubernetes/apps/home-assistant-hacs/home-assistant-hacs/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-hacs
  namespace: home-assistant-hacs
spec:
  hostnames:
    - hacs.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: home-assistant-hacs
          namespace: home-assistant-hacs
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
